# dns-converter

./: .gitignore  README.md  convert_dns.py  dns-record.json  pyproject.toml
dns_converter/: api.py  cli.py  converter.py  models.py
inputFiles/: dmp.dev.swift.com.csv  dmp.ent.swift.com.csv
tests/: demo_requests.py  test_api.py
