[tool.poetry]
name = "dns-converter"
version = "0.1.0"
description = "Convert Infoblox DNS CSV exports to JSON and expose via REST API"
authors = ["Jurgen <jurgen.vijverman@gmail.com>"]
readme = "README.md"
packages = [{ include = "dns_converter" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = { version = "^0.34", extras = ["standard"] }
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28"
pytest = "^8.0"
pytest-asyncio = "^0.25"

[tool.poetry.scripts]
dns-converter = "dns_converter.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore::DeprecationWarning:fastapi",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
